--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Simple Interest Calculator</title>
+        <title>Ready to Ship Form</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="maindiv">
-            <h1>Simple Interest Calculator</h1>
+            <h1>Order Ready to Ship</h1>
 <div class="innerdiv">
             Amount <input type="number"  id="principal">  
             <br/><br/>
