commit on Branch1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
             <br/>
 
-            <label for="images">Upload Images: </label><input type="file" accept="image/*" id="images">
+            <label for="images">Upload Images: </label>
+            <input type="file" accept="image/*" id="image">
 
             <br/><br/>
     
@@ -41,7 +42,9 @@
     </div>
 <br><br>
         <footer class="footer">
-            &#169; 2022 Bugh Inc.
+            <p>
+            &#169; 2022 Image Emailer by EDK.
+        </p>
         </footer>
         </div>
         
